--- a/src/app/frontend/src/app/app.component.html
+++ b/src/app/frontend/src/app/app.component.html
@@ -4,10 +4,10 @@
       <div class="card bg-dark my-5">
         <div class="card-body">
           <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
+          <app-product></app-product>
           <ul class="text-center list-inline py-3">
             <li class="list-inline-item">
               <a routerLink="/users" class="btn btn-info">List Products</a>
-
             </li>
             <li class="list-inline-item">
               <a routerLink="/adduser" class="btn btn-info">Add User</a>
@@ -15,7 +15,6 @@
           </ul>
         </div>
       </div>
-
     </div>
   </div>
 </div>
