--- a/src/app/frontend/src/app/app.component.html
+++ b/src/app/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+
+<router-outlet></router-outlet>
+
+
+<!--<div class="container">
   <div class="row">
     <div class="col-md-12">
       <div class="card bg-dark my-5">
@@ -17,4 +21,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
+
+
+
