--- a/src/app/frontend/src/app/product/product.component.html
+++ b/src/app/frontend/src/app/product/product.component.html
@@ -4,15 +4,22 @@
       <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
+        <th scope="col">Description</th>
+        <th scope="col">Item Code</th>
+        <th scope="col">Creator</th>
+        <th scope="col">Is Active</th>
+        <th scope="col">Price</th>
       </tr>
       </thead>
       <tbody>
-      <button (click)="productService.findAll()"> </button>
       <tr *ngFor="let prod of product">
-        <td>{{ prod.itemCode }}</td>
+        <td> {{prod.id}}</td>
         <td>{{ prod.description }}</td>
+        <td>{{ prod.productCode }}</td>
+
+        <td>{{prod.creator}}</td>
+        <td>{{prod.active}}</td>
+        <td>{{prod.price}}</td>
       </tr>
       </tbody>
     </table>
