--- a/src/app/frontend/src/app/login/login.component.html
+++ b/src/app/frontend/src/app/login/login.component.html
@@ -7,9 +7,9 @@
         <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
         <div class="alert alert-success" *ngIf='loginSuccess'>{{successMessage}}</div>
         <div class="form-group">
-          <label for="email">User Name :</label>
-          <input type="text" class="form-control" id="username" [(ngModel)]="username" placeholder="Enter User Name"
-                 name="username">
+          <label for="email">User email :</label>
+          <input type="text" class="form-control" id="email" [(ngModel)]="email" placeholder="Enter email"
+                 name="email">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
