--- a/src/app/frontend/src/app/product-edit/product-edit.component.html
+++ b/src/app/frontend/src/app/product-edit/product-edit.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
     <h1>Product</h1>
-    <form (ngSubmit)="onSubmit()" #productEdit="ngForm">
+    <form ngNativeValidate (ngSubmit)="onSubmit()" #productEdit="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
