--- a/src/app/frontend/src/app/app.component.html
+++ b/src/app/frontend/src/app/app.component.html
@@ -1,27 +1,11 @@
+<!--<h1>Angular Router</h1>
+<nav>
+  <a routerLink="/home" routerLinkActive="active">Productos</a>
 
+  <a routerLink="/products/new" routerLinkActive="active">    Crear Productos</a>
+</nav>-->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
-
-
-<!--<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card bg-dark my-5">
-        <div class="card-body">
-          <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
-          <app-product></app-product>
-          <ul class="text-center list-inline py-3">
-            <li class="list-inline-item">
-              <a routerLink="/users" class="btn btn-info">List Products</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/adduser" class="btn btn-info">Add User</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>-->
 
 
 
