--- a/src/app/frontend/src/app/product/product.component.html
+++ b/src/app/frontend/src/app/product/product.component.html
@@ -7,19 +7,23 @@
         <th scope="col">Description</th>
         <th scope="col">Item Code</th>
         <th scope="col">Creator</th>
-        <th scope="col">Is Active</th>
+        <th scope="col">Is Active?</th>
         <th scope="col">Price</th>
+        <th scope="col">Actions</th>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let prod of product">
-        <td> {{prod.id}}</td>
-        <td>{{ prod.description }}</td>
-        <td>{{ prod.productCode }}</td>
-
+      <tr *ngFor="let prod of products">
+        <td>{{prod.id}}</td>
+        <td>{{prod.description}}</td>
+        <td>{{prod.productCode}}</td>
         <td>{{prod.creator}}</td>
-        <td>{{prod.active}}</td>
-        <td>{{prod.price}}</td>
+        <td>{{prod.active ? "Active" : "Discontinued"}}</td>
+        <td>{{prod.price | currency:'EUR':true}}</td>
+        <td>
+          <input type="button" value="View" (click)="onDetailsView(prod)"/>
+          <input type="button" value="Edit" (click)="onEditView(prod)"/>
+        </td>
       </tr>
       </tbody>
     </table>
