Last nigth bug with backend and products solved, priceReduction in front end

--- a/src/app/frontend/src/app/product-edit/product-edit.component.html
+++ b/src/app/frontend/src/app/product-edit/product-edit.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>{{model}}</h1>
+  <h1>{{"Product editor"}}</h1>
   <form (ngSubmit)="onSubmit()" #productEdit="ngForm">
     <div class="form-group">
       <label for="productName">Name</label>
