--- a/src/app/frontend/src/app/product/product.component.html
+++ b/src/app/frontend/src/app/product/product.component.html
@@ -23,7 +23,8 @@
         <td>
           <input type="button" value="View" (click)="onDetailsView(prod)"/>
           <input type="button" value="Edit" (click)="onEditView(prod)"/>
-          <input type="button" value="Add Price Reduction" (click)="addPriceReduction(prod)"/>
+          <input type="button" value="Suppliers" (clic)="supplierWindow(prod)"/>
+          <input type="button" value="Discounts" (click)="addPriceReduction(prod)"/>
         </td>
       </tr>
       </tbody>
