--- a/src/app/frontend/src/app/product-view/product-view.component.html
+++ b/src/app/frontend/src/app/product-view/product-view.component.html
@@ -1,30 +1,38 @@
 <div class="container">
-    <h1>Details</h1>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">Name</div>
-        <div class="col-xs-12 col-md-6">{{model.name}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">{{model.productCode}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">Description</div>
-        <div class="col-xs-12 col-md-6">{{model.description}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">State</div>
-        <div class="col-xs-12 col-md-6">{{model.state ? "Active" : "Discontinued"}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">Price</div>
-        <div class="col-xs-12 col-md-6">{{model.price | currency:'EUR':true}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">Date of creation</div>
-        <div class="col-xs-12 col-md-6">{{model.creationDate | date:'dd/MM/yyyy hh:mm:ss'}}</div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 col-md-6">Creator ID</div>
-        <div class="col-xs-12 col-md-6">{{model.creator}}</div>
-    </div>
+  <table class="table table-hover table-dark">
+  <h1>Details</h1>
+  <table id="product-table">
+    <th colspan="2"> {{model.name}} </th>
+    <tr>
+      <td>ProductCode</td>
+      <td>{{model.productCode}}</td>
+    </tr>
+    <tr>
+      <td>Description</td><td>{{model.description}}</td></tr>
+    <tr><td>Active</td><td>{{model.active}}</td></tr>
+    <tr><td>Date of creation></td><td>{{model.creationDate | date:'medium'}}</td></tr>
+    <tr><td>Price</td><td>{{model.price}}</td></tr>
+    <tr><td>Creator</td><td>{{model.creator}}</td></tr>
+    <tr><td colspan="2">
+      <table *ngIf="model.supplier.length > 0">
+        <tr><th colspan="2"> Suppliers </th></tr>
+        <tr><th>Name</th><th>Country</th></tr>
+        <tr *ngFor="let sup of model.supplier">
+          <td>{{sup.name}}</td><td>{{sup.country}}</td>
+        </tr>
+      </table>
+    </td></tr>
+    <tr><td colspan="2">
+      <table *ngIf="model.priceReduction.length > 0">
+        <tr><th colspan="3"> Discounts </th></tr>
+        <tr><th>Quantity</th><th>Starts</th><th>Ends</th></tr>
+        <tr *ngFor="let discount of model.priceReduction">
+          <td>{{discount.reductionPrice | currency:'EUR':true}}</td>
+          <td>{{discount.startDate | date:'medium'}}</td>
+          <td>{{discount.endDate| date:'medium'}}</td>
+        </tr>
+      </table>
+    </td></tr>
+  </table>
+  </table>
 </div>
