--- a/src/app/frontend/src/app/product-view/product-view.component.html
+++ b/src/app/frontend/src/app/product-view/product-view.component.html
@@ -2,7 +2,7 @@
   <table class="table table-hover table-dark">
   <h1>Details</h1>
   <table id="product-table">
-    <th colspan="2"> {{model.name}} </th>
+    <!--<th colspan="2"> {{model.name}} </th>-->
     <tr>
       <td>ProductCode</td>
       <td>{{model.productCode}}</td>
