--- a/src/app/frontend/src/app/login/login.component.html
+++ b/src/app/frontend/src/app/login/login.component.html
@@ -7,8 +7,8 @@
         <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
         <div class="alert alert-success" *ngIf='loginSuccess'>{{successMessage}}</div>
         <div class="form-group">
-          <label for="email">User email :</label>
-          <input type="text" class="form-control" id="email" [(ngModel)]="email" placeholder="Enter email"
+          <label for="email">User :</label>
+          <input type="text" class="form-control" id="email" [(ngModel)]="email" placeholder="Enter username"
                  name="email">
         </div>
         <div class="form-group">
