--- a/src/app/frontend/src/app/product-edit/product-edit.component.html
+++ b/src/app/frontend/src/app/product-edit/product-edit.component.html
@@ -1,13 +1,7 @@
 <div class="container">
   <h1>{{"Product editor"}}</h1>
   <form (ngSubmit)="onSubmit()" #productEdit="ngForm">
-    <div class="form-group">
-      <label for="productName">Name</label>
-      <input type="text" class="form-control" id="productName" required [(ngModel)]="model.name" name="productName" #productName="ngModel">
-      <div [hidden]="productName.valid || productName.pristine" class="alert alert-danger">
-        Product name is required
-      </div>
-    </div>
+
 
     <div class="form-group">
       <label for="productCode">Code</label>
@@ -28,29 +22,20 @@
     <div class="form-group">
       <label for="price">Price</label>
       <div class="input-icon input-icon-right" id="price">
-        <input type="number" class="form-control" required [(ngModel)]="model.price" name="price" #price="ngModel">
+        <input type="number" class="form-control"  [(ngModel)]="model.price" name="price" #price="ngModel">
         <i>€</i>
-      </div>
-      <div [hidden]="price.valid || price.pristine" class="alert alert-danger">
-        Price is required
       </div>
     </div>
 
     <!-- TODO: Creation date should be an automatically generated value in my opinion, you could remove this -->
     <div class="form-group">
       <label for="creationDate">Creation date</label>
-      <input type="creationDate" class="form-control" id="creationDate" required [(ngModel)]="model.creationDate" name="creationDate" #creationDate="ngModel">
-      <div [hidden]="creationDate.valid || creationDate.pristine" class="alert alert-danger">
-        Creation date is required
-      </div>
+      <input type="creationDate" class="form-control" id="creationDate"  [(ngModel)]="model.creationDate" name="creationDate" #creationDate="ngModel">
     </div>
 
     <div class="form-group">
       <label for="creator">Creator ID</label>
-      <input type="number" class="form-control" id="creator" required [(ngModel)]="model.creator" name="creator" #creator="ngModel">
-      <div [hidden]="creator.valid || creator.pristine" class="alert alert-danger">
-        Creator is required
-      </div>
+      <input type="number" class="form-control" id="creator"  [(ngModel)]="model.creator" name="creator" #creator="ngModel">
     </div>
 
     <button type="submit" class="btn btn-success" [disabled]="!productEdit.form.valid">Submit</button>
